syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

service Greeter {
  rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest{
	int32 id = 1;
	int32 pointX = 2;
	int32 pointY = 3;
}

message HelloReply{
	int32 id = 1;
	int32 pointX = 2;
	int32 pointY = 3;
}
